# q2-stats

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  pyproject.toml  setup.py
conda-recipe/: meta.yaml
q2_stats/: __init__.py  examples.py  plugin_setup.py
q2_stats/hypotheses/: pairwise.py
q2_stats/plots/: raincloud.py
q2_stats/tests/: test_stats.py
q2_stats/types/: formats.py  types.py
q2_stats/types/_deferred_setup/: _transformers.py  _validators.py
q2_stats/types/_deferred_setup/tests/: test_transformers.py
