[project]
name = "q2-stats"
authors = [
    { name = "Liz Gehret", email = "elizabeth.gehret@nau.edu" }
]
description = "QIIME 2 Plugin used for statistical analyses."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/qiime2/q2-stats"
Repository = "https://github.com/qiime2/q2-stats"

[project.entry-points.'qiime2.plugins']
"q2-stats" = "q2_stats.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "q2-stats/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["q2_stats*"]

[tool.setuptools.package-data]
q2_stats = ["**/*"]
